[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vault"
version = "0.1.0"
description = "Pokemon TCG collection value tracker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
    "flask>=3.0",
]

[project.scripts]
vault = "vault.cli:main"

[tool.setuptools.packages.find]
where = ["."]
